# gpu-util-webhook

./: .gitignore  README copy.md  README.md  add_cron.sh  gpu_usage.py  my_url.py  pyproject.toml
docs/: index.html
src/gpumanager/: __init__.py  __main__.py  _compat.py  cli.py  collector.py  config.py  report.py  slack.py  storage.py  systemd.py
